# bee-code-interpreter

./: .dockerignore  .gitignore  .gitmodules  .mise.toml  Dockerfile  MAINTAINERS.md  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-build-push.yaml  ghcr-publish-release-image.yml
examples/: benchmark-fib.py  benchmark-numpy.py  cowsay.py  crash.py  escaping.py  fib.py  files.py  hello_world_read_file.py  hello_world_write_file.py  ls.py  tcp.py  using_imports.py
executor/: .dockerignore  Cargo.toml  Dockerfile  execute  ffmpeg-wrapper  pandoc-wrapper  requirements-skip.txt  requirements.txt  server.rs  sitecustomize.py
k8s/: local.yaml  pull.yaml
scripts/: build.sh  copyright.sh  publish.sh  run-build.sh  run-pull.sh  run.sh
src/code_interpreter/: __main__.py  application_context.py  config.py  health_check.py  kubernetes_check.py
src/code_interpreter/services/: custom_tool_executor.py  grpc_server.py  http_server.py  kubectl.py  kubernetes_code_executor.py  pod_file_manager.py  pod_filesystem_state_manager.py  storage.py
src/code_interpreter/services/grpc_servicers/: code_interpreter_servicer.py
src/code_interpreter/utils/: validation.py
test/e2e/: test_code_interpreter.py  test_grpc.py  test_http.py
