[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[[bin]]
name="executor-server"
path = "server.rs"

[dependencies]
actix-web = "4.9"
futures = "0.3"
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["fs"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.12"
env_logger = "0.11"